[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/PongArena.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Orbitron Light.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://SFX/Mysterious_Futuristic_8_bit_Music_loop.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[node name="PongArena" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_left = 4.66528
margin_top = 4.66541
margin_right = 1924.67
margin_bottom = 1084.67
color = Color( 0, 0, 0, 1 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 64, 540 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1856, 540 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 960, 540 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 832.0
margin_top = 64.0
margin_right = 1088.0
margin_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 37.0
margin_right = 219.0
margin_bottom = 64.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 182.0
margin_bottom = 64.0

[node name="P1Score" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Spacer" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 125.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "    "

[node name="P2Score" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 182.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="NotificationBox" type="CenterContainer" parent="."]
margin_left = 842.0
margin_top = 256.0
margin_right = 1098.0
margin_bottom = 320.0

[node name="Notification" type="Label" parent="NotificationBox"]
margin_left = 127.0
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
[connection signal="p1_score" from="KinematicBody2D" to="." method="_on_KinematicBody2D_p1_score"]
[connection signal="p2_score" from="KinematicBody2D" to="." method="_on_KinematicBody2D_p2_score"]
[connection signal="reset" from="KinematicBody2D" to="." method="_on_KinematicBody2D_reset"]
